RESOLVED FIXED305769
WebServiceWorkerFetchTaskClient::doCancel can create a potential deadlock
https://bugs.webkit.org/show_bug.cgi?id=305769
Summary WebServiceWorkerFetchTaskClient::doCancel can create a potential deadlock
youenn fablet
Reported 2026-01-19 06:03:42 PST
WebServiceWorkerFetchTaskClient::doCancel can create a potential deadlock
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-19 06:04:02 PST
youenn fablet
Comment 2 2026-01-19 06:10:51 PST
EWS
Comment 3 2026-01-19 15:15:03 PST
Committed 305835@main (4b0afef4a5e0): <https://commits.webkit.org/305835@main> Reviewed commits have been landed. Closing PR #56830 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.