Cherry-pick 4b0afef4a5e0. rdar://168522708

WebServiceWorkerFetchTaskClient::doCancel can create a potential deadlock
    rdar://168446830
    https://bugs.webkit.org/show_bug.cgi?id=305769

    Reviewed by Chris Dumez.

    WebServiceWorkerFetchTaskClient::doCancel is called when we try to cancel a fetch intercepted by a service worker.
    This in turns will cancel the fetch readablestream body synchronously via the client setCancelledCallback callback in ServiceWorkerFetch::processResponse.
    Cancelling the stream will call the client consumeBodyReceivedByChunk callback set in ServiceWorkerFetch::processResponse.
    The consumeBodyReceivedByChunk callback can then call WebServiceWorkerFetchTaskClient::didFinish or didFail.

    All of this will happen synchronously.
    In that case, as WebServiceWorkerFetchTaskClient::doCancel holds a lock for its m_connection, WebServiceWorkerFetchTaskClient::didFinish may be blocked since it also tries to take the same lock.

    We update the code in WebServiceWorkerFetchTaskClient::doCancel to only take the connection lock for the time to set m_connection.
    The lock is no longer held while executing the cancelled callback.
    This should prevent this potential deadlock.

    Canonical link: https://commits.webkit.org/305835@main

Identifier: 305413.75@safari-7624-branch